# libsa

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  cas.h  common.h  doxyfile  index.html  sa.c  sa.cpp  sa.h
.github/workflows/: build.yaml  cd.yml  ci.yml  deploy.yaml  docs.yml  document.yaml  integrate.yaml
doc/: header.html
docs/: requirements.txt
docs/source/: api.rst  conf.py
docs/source/_templates/sidebar/: sphinx-multiversion.html  version.html
include/: sa.h
main/: .buildinfo  api.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
main/.doctrees/: api.doctree  environment.pickle  index.doctree
main/_sources/: api.rst.txt
main/_static/: documentation_options.js
sockaddr.Net/: Class1.cs  sockaddr.Net.sln  sockaddr.Net.sln.DotSettings
sockaddr.Net/sockaddr.Net/: AssemblyAttributes.cs  CleanUpAction.cs  SockaddrAddressBytes.cs  SockaddrAddressBytesEnumerator.cs  SockaddrExtensions.cs  sockaddr.Net.csproj  sockaddr.Net.sln.DotSettings  sockaddr.cs
sockaddr.Net/sockaddr.Net.Tests/: sockaddr.Net.Tests.csproj  sockaddrTests.cs
sockaddr.Net/sockaddr.Net.Tests/Properties/: launchSettings.json
src/: atomic.h  common.h  sa_address.c  sa_detect.c  sa_factory.c  sa_family.c  sa_mm.c  sa_mm.h  sa_port.c  sa_scope.c  sa_size.c  sa_to_str.c
tests/: CMakeLists.txt  test_sa_address_bytes.cpp  test_sa_address_to_str.cpp  test_sa_family_offset.cpp  test_sa_free.cpp  test_sa_get_address_byte.cpp  test_sa_get_family.cpp  test_sa_get_port.cpp  test_sa_get_scope.cpp  test_sa_get_size.cpp  test_sa_has_len_field.cpp  test_sa_ipv4.cpp  test_sa_ipv4_to_str.cpp  test_sa_ipv6.cpp  test_sa_ipv6_to_str.cpp  test_sa_is_ipv4.cpp  test_sa_is_ipv6.cpp  test_sa_is_unspec.cpp  test_sa_set_address_byte.cpp  test_sa_set_family.cpp  test_sa_set_port.cpp  test_sa_set_scope.cpp  test_sa_to_str.cpp  test_sa_unspec.cpp
v22.03.2/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
v22.03.2/.doctrees/: environment.pickle  index.doctree
v22.03.2/_sources/: index.rst.txt
v22.03.2/_static/: documentation_options.js
v22.05.0/: .buildinfo  api.html  genindex.html  index.html  search.html  searchindex.js
v22.05.0/.doctrees/: api.doctree  environment.pickle  index.doctree
v22.05.0/_sources/: index.md.txt
v22.09.0/: .buildinfo  api.html  genindex.html  index.html  search.html
v22.09.0/.doctrees/: api.doctree  environment.pickle  index.doctree
v22.09.0/_static/: documentation_options.js
